# yomutube

./: .coderabbit.yaml  .editorconfig  .envrc  .firebaserc  .gitignore  .openapi-generator-ignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  analysis_options.yaml  cliff.toml  dart_dependency_validator.yaml  firebase.json  pubspec.yaml  yomutube-f5b5d-firebase-adminsdk-gtj96-853a41ebc2.json.secret
functions/: .env.local.secret  .envrc  .gcloudignore  Makefile  README.md  bundle.py  caption.py  firestore_models.py  main.py  model.py  models.py  periodic_models.py  pyproject.toml  pytest.ini  requirements.txt  summarize.py  utils.py
functions/YouTubeDataV3/: README.md  pyproject.toml  setup.py
functions/YouTubeDataV3/.openapi-generator/: FILES
functions/YouTubeDataV3/docs/: Caption.md  CaptionList.md  CaptionSnippet.md  CaptionsApi.md  ContentDetails.md  ContentDetailsRegionRestriction.md  ContentRating.md  FileDetails.md  FileDetailsAudioStreamsInner.md  FileDetailsVideoStreamsInner.md  LiveStreamingDetails.md  LocalizationValue.md  Localized.md  PageInfo.md  Player.md  ProcessingDetails.md  ProcessingDetailsProcessingProgress.md  RecordingDetails.md  Snippet.md  Statistics.md  Status.md  Suggestions.md  SuggestionsTagSuggestionsInner.md  Thumbnail.md  TopicDetails.md  Video.md  VideoCategory.md  VideoCategoryList.md  (+3 more)
functions/api/: .gitlab-ci.yml  .travis.yml  README.md  pyproject.toml  setup.py  tox.ini
pulumi/: .env.secret  Makefile  Pulumi.dev.yaml  Pulumi.yaml  __main__.py  pyproject.toml  yomutube-f5b5d-3aa0983f93d6.json.secret
(+249 files in other folders)
